<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/transparent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/notice_bg"
        android:layout_margin="10dp"
        android:orientation="vertical" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="风险类型说明"
                android:textSize="18sp"
                android:textColor="@color/maintext"
                android:paddingTop="8dp"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safeType1"
                android:textSize="14sp"
                android:textColor="@color/noticetext"
                android:padding="3dp"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safeType2"
                android:textSize="14sp"
                android:textColor="@color/noticetext"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safeType3"
                android:textSize="14sp"
                android:textColor="@color/noticetext"
                android:padding="3dp"
                android:layout_gravity="center_vertical"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safeType4"
                android:textSize="14sp"
                android:textColor="@color/noticetext"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safeType5"
                android:textSize="14sp"
                android:textColor="@color/noticetext"
                android:padding="3dp"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safeType6"
                android:textSize="14sp"
                android:textColor="@color/noticetext"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safeType7"
                android:textSize="14sp"
                android:textColor="@color/noticetext"
                android:padding="3dp"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safeType5"
                android:textSize="14sp"
                android:textColor="@color/noticetext"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safeType6"
                android:textSize="14sp"
                android:textColor="@color/noticetext"
                android:padding="3dp"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safeType7"
                android:textSize="14sp"
                android:textColor="@color/noticetext"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safeType8"
                android:textSize="14sp"
                android:textColor="@color/noticetext"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safeType9"
                android:textSize="14sp"
                android:textColor="@color/noticetext"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/Notice_confirm_bt"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="top|right"
        android:background="@drawable/close"
        />
</FrameLayout>
