<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal">
<!--<RelativeLayout-->
    <!--android:id="@+id/touch_dck"-->
    <!--android:layout_width="1dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="1"-->
    <!--android:visibility="visible"-->
    <!--&gt;-->
  <!--<LinearLayout-->
      <!--android:id="@+id/iconView_1"-->
      <!--android:layout_width="wrap_content"-->
      <!--android:layout_height="match_parent"-->
      <!--android:orientation="vertical"-->
      <!--android:gravity="center"-->
      <!--android:layout_centerInParent="true"-->
      <!--android:padding="5dp"-->
      <!--android:layout_centerVertical="true"-->
      <!--&gt;-->

      <!--<ImageView-->
          <!--android:id="@+id/img_dck"-->
          <!--android:layout_width="@dimen/default_ico_size"-->
          <!--android:layout_height="@dimen/default_ico_size"-->
          <!--android:scaleType="fitXY"-->
          <!--android:src="@drawable/dck_active"-->
          <!--/>-->
      <!--<TextView-->
          <!--android:id="@+id/text_dck"-->
          <!--android:layout_width="wrap_content"-->
          <!--android:layout_height="wrap_content"-->
          <!--android:text="@string/tab_survey_wait"-->
          <!--android:textSize="@dimen/text_tab_size"-->
          <!--android:textColor="@color/selecttext_red"-->
          <!--/>-->
      <!--<TextView-->
          <!--android:id="@+id/bar_num"-->
          <!--android:layout_width="40px"-->
          <!--android:layout_height="26px"-->
          <!--android:layout_marginLeft="0dp"-->
          <!--android:layout_toRightOf="@+id/iconView_1"-->
          <!--android:background="@drawable/red_dot_bg"-->
          <!--android:text="1"-->
          <!--android:gravity="center"-->
          <!--android:textColor="#FFFFFF"-->
          <!--android:textSize="10dp" />-->
  <!--</LinearLayout>-->
<!--</RelativeLayout>-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/touch_dck"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone"
    >
      <RelativeLayout
          android:id="@+id/img_dck_re"
          android:layout_width="24dp"
          android:layout_height="32dp"
          android:paddingTop="5dp"
          android:layout_centerHorizontal="true"
          >
        <ImageView
            android:id="@+id/img_dck"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/dck_active" />
      </RelativeLayout>
        <TextView
            android:id="@+id/text_dck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_dck_re"
            android:gravity="center"
            android:textSize="@dimen/text_tab_size"
            android:text="@string/tab_survey_wait" />
        <TextView
            android:id="@+id/bar_num1"
            android:layout_width="20dip"
            android:layout_height="20dip"
            android:layout_marginLeft="-8dp"
            android:singleLine="true"
            android:layout_marginTop="0dp"
            android:layout_toRightOf="@+id/img_dck_re"
            android:background="@drawable/red_dot_bg"
            android:text="1"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="10dp"
            android:visibility="gone"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/touch_yck"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone"
        >
    <RelativeLayout
        android:id="@+id/img_yck_re"
        android:layout_width="24dp"
        android:layout_height="32dp"
        android:paddingTop="5dp"
        android:layout_centerHorizontal="true"
        >
        <ImageView
                android:id="@+id/img_yck"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/default_ico_size"
                android:layout_height="@dimen/default_ico_size"
                android:scaleType="fitXY"
                android:src="@drawable/yck"
                />
    </RelativeLayout>
            <TextView
                android:id="@+id/text_yck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_yck_re"
                android:layout_centerHorizontal="true"
                android:text="@string/tab_survey_finish"
                android:textSize="@dimen/text_tab_size"
                android:textColor="@color/defaulttext_black"
                />
            <TextView
                android:id="@+id/bar_num2"
                android:layout_width="18dip"
                android:layout_height="18dip"
                android:layout_marginLeft="-8dp"
                android:layout_toRightOf="@+id/img_yck_re"
                android:background="@drawable/red_dot_bg"
                android:text="1"
                android:gravity="center"
                android:visibility="gone"
                android:textColor="#FFFFFF"
                android:textSize="14dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/touch_dds"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone"
        >
    <RelativeLayout
        android:id="@+id/img_dds_re"
        android:layout_width="24dp"
        android:layout_height="32dp"
        android:paddingTop="5dp"
        android:layout_centerHorizontal="true"
        >
            <ImageView
                android:id="@+id/img_dds"
                android:layout_width="@dimen/default_ico_size"
                android:layout_height="@dimen/default_ico_size"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/dds"
                />
    </RelativeLayout>
            <TextView
                android:id="@+id/text_dds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/img_dds_re"
                android:text="@string/tab_check_wait"
                android:textSize="@dimen/text_tab_size"
                android:textColor="@color/defaulttext_black"
                />
            <TextView
                android:id="@+id/bar_num3"
                android:layout_width="18dip"
                android:layout_height="18dip"
                android:layout_marginLeft="-8dp"
                android:layout_toRightOf="@+id/img_dds_re"
                android:background="@drawable/red_dot_bg"
                android:text="1"
                android:visibility="gone"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="14dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/touch_dsz"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone"
        >
    <RelativeLayout
        android:id="@+id/img_dsz_re"
        android:layout_width="24dp"
        android:layout_height="32dp"
        android:paddingTop="5dp"
        android:layout_centerHorizontal="true"
        >
            <ImageView
                android:id="@+id/img_dsz"
                android:layout_width="@dimen/default_ico_size"
                android:layout_height="@dimen/default_ico_size"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:src="@drawable/dsz"
                />
    </RelativeLayout>
            <TextView
                android:id="@+id/text_dsz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_dsz_re"
                android:layout_centerHorizontal="true"
                android:text="@string/tab_check_going"
                android:textSize="@dimen/text_tab_size"
                android:textColor="@color/defaulttext_black"
                />
        <TextView
            android:id="@+id/bar_num4"
            android:layout_width="18dip"
            android:layout_height="18dip"
            android:layout_marginLeft="-8dp"
            android:layout_toRightOf="@+id/img_dsz_re"
            android:background="@drawable/red_dot_bg"
            android:text="1"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="14dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/touch_yds"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone"
        >
    <RelativeLayout
        android:id="@+id/img_yds_re"
        android:layout_width="24dp"
        android:layout_height="32dp"
        android:paddingTop="5dp"
        android:layout_centerHorizontal="true"
        >
            <ImageView
                android:id="@+id/img_yds"
                android:layout_width="@dimen/default_ico_size"
                android:layout_height="@dimen/default_ico_size"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:src="@drawable/yds"
                />
    </RelativeLayout>
            <TextView
                android:id="@+id/text_yds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_yds_re"
                android:layout_centerHorizontal="true"
                android:text="@string/tab_check_finish"
                android:textSize="@dimen/text_tab_size"
                android:textColor="@color/defaulttext_black"
                />
        <TextView
            android:id="@+id/bar_num5"
            android:layout_width="18dip"
            android:layout_height="18dip"
            android:layout_marginLeft="-8dp"
            android:layout_toRightOf="@+id/img_yds_re"
            android:background="@drawable/red_dot_bg"
            android:text="1"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="14dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/touch_hp"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone"
        >
    <RelativeLayout
        android:id="@+id/img_hp_re"
        android:layout_width="24dp"
        android:layout_height="32dp"
        android:paddingTop="5dp"
        android:layout_centerHorizontal="true"
        >
            <ImageView
                android:id="@+id/img_hp"
                android:layout_width="@dimen/default_ico_size"
                android:layout_height="@dimen/default_ico_size"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:src="@drawable/hp"
                />
    </RelativeLayout>
            <TextView
                android:id="@+id/text_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_get_ticket"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/img_hp_re"
                android:textSize="@dimen/text_tab_size"
                android:textColor="@color/defaulttext_black"
                />
        <TextView
            android:id="@+id/bar_num6"
            android:layout_width="18dip"
            android:layout_height="18dip"
            android:layout_marginLeft="-8dp"
            android:layout_toRightOf="@+id/img_hp_re"
            android:background="@drawable/red_dot_bg"
            android:text="1"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="14dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/touch_all"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone"
        >
    <RelativeLayout
        android:id="@+id/img_all_re"
        android:layout_width="24dp"
        android:layout_height="32dp"
        android:paddingTop="5dp"
        android:layout_centerHorizontal="true"
        >
            <ImageView
                android:id="@+id/img_all"
                android:layout_width="@dimen/default_ico_size"
                android:layout_height="@dimen/default_ico_size"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:src="@drawable/all"
                />
    </RelativeLayout>
            <TextView
                android:id="@+id/text_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_all_re"
                android:layout_centerHorizontal="true"
                android:text="@string/tab_all"
                android:textSize="@dimen/text_tab_size"
                android:textColor="@color/defaulttext_black"
                />
        <TextView
            android:id="@+id/bar_num7"
            android:layout_width="18dip"
            android:layout_height="18dip"
            android:layout_marginLeft="-8dp"
            android:layout_toRightOf="@+id/img_all_re"
            android:background="@drawable/red_dot_bg"
            android:text="1"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="14dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/touch_rswork"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone"
        >
    <RelativeLayout
        android:id="@+id/img_rswork_re"
        android:layout_width="24dp"
        android:layout_height="32dp"
        android:paddingTop="5dp"
        android:layout_centerHorizontal="true"
        >
            <ImageView
                android:id="@+id/img_rswork"
                android:layout_width="@dimen/default_ico_size"
                android:layout_height="@dimen/default_ico_size"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:src="@drawable/gzlb"
                />
    </RelativeLayout>
            <TextView
                android:id="@+id/text_rswork_re"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_rswork"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/img_rswork_re"
                android:textSize="@dimen/text_tab_size"
                android:textColor="@color/defaulttext_black"
                />
            <TextView
                android:id="@+id/bar_num8"
                android:layout_width="18dip"
                android:layout_height="18dip"
                android:layout_marginLeft="-8dp"
                android:layout_toRightOf="@+id/img_rswork_re"
                android:background="@drawable/red_dot_bg"
                android:text="1"
                android:visibility="gone"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="14dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/touch_rshistroy"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone"
        >
    <RelativeLayout
        android:id="@+id/img_rshistory_re"
        android:layout_width="24dp"
        android:layout_height="32dp"
        android:paddingTop="5dp"
        android:layout_centerHorizontal="true"
        >
            <ImageView
                android:id="@+id/img_rshistroy"
                android:layout_width="@dimen/default_ico_size"
                android:layout_height="@dimen/default_ico_size"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:src="@drawable/lslb"
                />
    </RelativeLayout>
            <TextView
                android:id="@+id/text_rshistroy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_rshistroy"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/img_rshistory_re"
                android:textSize="@dimen/text_tab_size"
                android:textColor="@color/defaulttext_black"
                />
            <TextView
                android:id="@+id/bar_num9"
                android:layout_width="18dip"
                android:layout_height="18dip"
                android:layout_marginLeft="-8dp"
                android:layout_toRightOf="@+id/img_rshistory_re"
                android:background="@drawable/red_dot_bg"
                android:text="1"
                android:visibility="gone"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="14dp" />
    </RelativeLayout>
</LinearLayout>
